# OpenGL_Cpp_empty

./: CMakeLists.txt  README.md
Lib/: glew32.lib  glfw3.lib
Main/Source/: CMakeLists.txt  Main.cpp
